--- a/杂七杂八/1.html
+++ b/杂七杂八/1.html
@@ -5,26 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      .transition-p {
-        width: 100px;
-        height: 40px;
-        opacity: 0.6;
-        border-radius: 10px;
-        background: #03a9f4;
-        text-align: center;
-        line-height: 40px;
-        color: #fff;
-        transition: all 0.2s ease-in;
-      }
-      .transition-p:hover {
-        opacity: 1;
-        width: 120px;
-      }
-    </style>
+     
   </head>
   <body>
-    <h2>transition: width&opacity</h2>
-    <p class="transition-p">菜单一</p>
+    <abbr title="PageRank">PR</abbr>
   </body>
 </html>
