--- a/杂七杂八/1 copy.html
+++ b/杂七杂八/1 copy.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-     
+     <style>
+       .text{
+         width: 100px;
+         /* overflow:hidden;
+         text-overflow:ellipsis;
+	       white-space:nowrap */
+         white-space: nowrap;
+         overflow: hidden;
+         text-overflow: ellipsis;
+       }
+     </style>
   </head>
   <body>
-    <abbr title="PageRank">PR</abbr>
+    <div class="text">你好这是一大段文字，请你看看这些文字的长度有多少呢？</div>
   </body>
 </html>
