--- a/杂七杂八/1 copy.html
+++ b/杂七杂八/1 copy.html
@@ -15,9 +15,14 @@
          overflow: hidden;
          text-overflow: ellipsis;
        }
+       .but{
+         width: 100px;
+         height: 100px;
+       }
      </style>
   </head>
   <body>
     <div class="text">你好这是一大段文字，请你看看这些文字的长度有多少呢？</div>
+    <button class="but">这是一个按钮</button>
   </body>
 </html>
