--- a/杂七杂八/1 copy.html
+++ b/杂七杂八/1 copy.html
@@ -24,5 +24,7 @@
   <body>
     <div class="text">你好这是一大段文字，请你看看这些文字的长度有多少呢？</div>
     <button class="but">这是一个按钮</button>
+    <input type="text">
+    <input type="select">
   </body>
 </html>
